--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "astro": "^4.11.0",
     "@astrojs/tailwind": "^5.1.0",
-    "tailwindcss": "^3.4.10",
-    "clsx": "^2.1.1"
+    "@nanostores/persistent": "^1.2.0",
+    "astro": "^4.11.0",
+    "clsx": "^2.1.1",
+    "nanostores": "^1.1.0",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "prettier": "^3.3.3"
