--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "@nanostores/persistent": "^1.2.0",
+    "@supabase/supabase-js": "^2.89.0",
     "astro": "^4.11.0",
     "clsx": "^2.1.1",
     "nanostores": "^1.1.0",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "transbank-sdk": "^6.1.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "prettier": "^3.3.3"
